# curve-stablecoin

./: .conflict-files  .env-example  .flake8  .git-blame-ignore-revs  .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  LLAMMAs  README.MD  README.md  STYLE.md  TODO.rst  ape-config.yaml  ape-requirements.txt  ape-run.sh  boa-requirements.txt  brownie-config.yaml  brownie-requirements.txt  bunfig.toml  dev-requirements.txt  foundry.toml  hardhat.config.js  index.html  pyproject.toml  pypytest  pytest.ini  requirements.txt  test_forked.sh  tsconfig.json
.auto-resolution/: .coveragerc  .env-example  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  LICENSE  README.md
.auto-resolution/curve_stablecoin/: Stablecoin.vy
.auto-resolution/tests/: conftest.py
.conflict-base-0/scripts/: boa-deploy-deleverage-zaps.py  boa-deploy-leverage-zaps.py
.conflict-base-0/tests/: README.md
.conflict-side-0/curve_stablecoin/: AMM.vy
.conflict-side-0/scripts/: boa-deploy-leverage-zap.py
.conflict-side-1/: pyproject.toml
.conflict-side-1/curve_stablecoin/: constants.vy  controller.vy
.github/workflows/: apisec-scan.yml  bandit.yml  bearer.yml  codacy.yml  codeql.yml  deploy-llamalend-op.yaml  endorlabs.yml  opencode.yaml  pre-commit.yaml  runtime-bytespace.yaml  test-stablecoin.yaml  test.yaml  xanitizer.yml
boa_tests/: conftest.py  test_boa.py  test_math.py
boa_tests/amm/: conftest.py  test_amount_for_price.py  test_flip.py  test_price_oracles.py  test_st_exchange.py  test_x.py  test_xdown_yup_invariants.py
boa_tests/lendborrow/: conftest.py  test_bigfuzz.py  test_calculate_n1.py  test_factory.py  test_health_in_trades.py  test_max_borrowable.py  test_x.py  (+1 more)
contracts/: AMM.vy  AggregateStablePrice.vy  BoostedLMCallback.vy  ConstantMonetaryPolicy.vy  Controller.vy  ControllerFactory.vy  ControllerView.vy  CryptoWithStablePrice.vy  CurveTokenV3.vy  DummyPriceOracle.vy  EmaPriceOracle.vy  ExchangeDyZap.vy  LMCallback.vy  LendingVault.vy  MintController.vy  ParamManager.vy  Stablecoin.vy  Stableswap.vy  SwapCalc.vy  WLToken.vy  amm.vy  common.vy  constants.vy  controller_core.vy
curve_stablecoin/: AMM.vy  Configurator.vy  Controller.vy  ControllerView.vy  LMCallback.vy  MintController.vy  Stableswap.vy  __init__.py  constants.vy  controller.vy
deploy_env/: pyproject.toml
deployment-logs/: arbitrum-deployment-addresses.txt  deployment-addresses.txt
deployments/: llamalend-op-WBTC-USDC-testing.html  llamalend-op-WBTC-USDC.jsonc  llamalend-op-testing-ETH-USD-fake.html  llamalend-op-testing-ETH-USD-fake.jsonc  llamalend-op-testing-fake-token.jsonc  llamalend-op-testing-mine.jsonc  llamalend-op-testing.html  llamalend-op-testing.jsonc  llamalend-op-wstETH-USDC-testing.html  llamalend-op-wstETH-USDC.jsonc  llamalend-op-wstETH-WETH-testing.html  llamalend-op-wstETH-WETH.jsonc  llamalend-op.jsonc
doc/: curve-stablecoin.lyx
model/: avg.py  rate-secondary-susde.py  rate-secondary.py  rate-usde.py  rates-model.py
rules/: no-accounts-fixture.yml
scripts/: ape-deploy-amm-controller-Aug17.py  ape-deploy-amm-controller.py  ape-deploy-controller-17jun.py  ape-deploy-deleverage-zaps.py  ape-deploy-leverage-zaps.py  ape-deploy-owner-proxy.py  ape-deploy-sepolia.py  ape-deploy.py  ape-eth-oracle.py  ape-frxeth-oracle.py  ape-monetary-policy-2.py  ape-monetary-policy-weth-wbtc.py  ape-oracle-deploy.py  ape-steth-oracle.py  ape-steth-test-oracle.py  ape-tbtc-oracle.py  ape-test-deploy.py  ape-wbtc-oracle.py  arbi-agg-deployer.py  boa-arbi-console.py  boa-deploy-1inch-leverage-zap.py  boa-deploy-deleverage-zaps.py  boa-deploy-flashloan.py  boa-deploy-fxn-oracle.py  boa-deploy-lending-example.py  boa-deploy-lending.py  boa-deploy-leverage-zap.py  boa-deploy-leverage-zaps.py  boa-deploy-llamalend-op-ETH-USD-fake.py  boa-deploy-llamalend-op-WBTC-USDC.py  boa-deploy-llamalend-op-keystore.py  boa-deploy-llamalend-op-test.py  boa-deploy-llamalend-op-wstETH-USDC.py  boa-deploy-llamalend-op-wstETH-WETH.py  boa-deploy-llamalend-op.py  boa-deploy-odos-leverage-zap.py  boa-deploy-susde-oracle.py  boa-llamalend-op-add-positions-fake-eth-usd.py  boa-llammalend-op-add-positions-long-eth.py  boa-llammalend-op-add-positions.py  (+44 more)
tests/: README.md  STATEFUL.md  conftest.py  test_deposit_withdraw.py  test_exchange.py  test_flip.py  test_math.py  test_packing.py  test_price_oracles.py  test_st_exchange.py
tests_forked/: conftest.py  test_address_provider_integration.py  test_lendborrow.py  test_metaregistry_integration.py  test_registry_integration.py  utils.py
tests_forked_ape/: conftest.py  test_lendborrow.py  test_registry_integration.py  utils.py
tests_leverage/: conftest.py  test_leverage.py  test_leverage_light.py  utils.py
workflows/: mdx-shim.d.ts
(+876 files in other folders)
