[project]
name = "curve-stablecoin"
version = "2.0.0"
description = "Curve Stablecoin contracts and tests"
readme = "README.md"
requires-python = ">=3.10,<4"
authors = [
    { name = "Michael Egorov", email = "michael@curve.fi" }
]

dependencies = [
    "vyper==0.4.3",
    "snekmate>=0.1.1",
    "curve-std",
]

[dependency-groups]
dev = [
    "titanoboa",
    "hypothesis>=6.99.0",
    "pytest>=8.0.0",
    "pytest-xdist>=3.5",
    "pytest-forked>=1.6.0",
    "pytest-cov>=4.0.0",
    "pytest-profiling>=1.8.1",
    "pre-commit==4.3.0",
    "z3-solver>=4.12.0",
]

[tool.uv.sources]
titanoboa = { git = "https://github.com/AlbertoCentonze/titanoboa", rev = "vvm-eval" }
curve-std = { git = "https://github.com/curvefi/curve-std", rev = "dcbfbc1658d5a47489dea6cd88be43e721b24a18" }
# TODO add stableswap here as a package instead of git submodule


[tool.ruff.lint]
select = ["TID252"]
ignore = [
    # Should be eventually fixed
    "E722" ,
    "F821"
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"


[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["curve_stablecoin", "tests"]
