[tool.poetry]
name = "curve-stablecoin"
version = "0.1.0"
description = ""
authors = ["Michael Egorov <michael@curve.fi>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = ">=3.10,<4"
vyper = "0.3.9"
poetry = "1.5.1"
python-dotenv = "^1.0.0"
eth-ape = "^0.6.15"
ape-vyper = "^0.6.9"
ape-etherscan = "^0.6.8"
ape-ledger = "^0.6.2"
ape-hardhat = "^0.6.12"
ape-alchemy = "^0.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
